fixed feedback white space gap

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -76,6 +76,7 @@ i.icon.ion-ios-home-outline {
 
 .feedbackformpage {
 	background-color: #E6E7E8;
+	margin-top: -3%;
 }
 
 /*.feedbackform {
